# VibeVerb

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: AllPassFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbEngine.cpp  ReverbEngine.h
